@@ -1,3 +1,8 @@
+2007-03-12  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil.Metadata/UserStringsHeap.cs:
+		Avoid trailing blank on some systems.
+
 2007-02-22  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/ReflectionWriter.cs:
